--- a/index.html
+++ b/index.html
@@ -70,6 +70,35 @@
           </div>
           <img src="images/hero.png" alt="hero img" class="hero-img" />
         </div>
+        <div class="features container">
+          <div>
+            <img src="images/features-1.svg" alt="features 1" />
+            <h3>Certified Teacher</h3>
+            <div></div>
+            <p>
+              The gradual accumulation of information about atomic and
+              small-scale behaviour...
+            </p>
+          </div>
+          <div>
+            <img src="images/features-2.svg" alt="features 2" />
+            <h3>2,769 online courses</h3>
+            <div></div>
+            <p>
+              The gradual accumulation of information about atomic and
+              small-scale behaviour...
+            </p>
+          </div>
+          <div>
+            <img src="images/features-3.svg" alt="features 3" />
+            <h3>2,769 online courses</h3>
+            <div></div>
+            <p>
+              The gradual accumulation of information about atomic and
+              small-scale behaviour...
+            </p>
+          </div>
+        </div>
       </section>
     </main>
   </body>
