--- a/index.html
+++ b/index.html
@@ -101,5 +101,104 @@
         </div>
       </section>
     </main>
+    <section id="package-1" class="container">
+      <img src="images/thumb-concept-15.png" alt="thumb concept" />
+      <div class="package-info">
+        <div></div>
+        <h2>Approdable Packages</h2>
+        <p>
+          Problems trying to resolve the conflict between the two major realms
+          of Classical physics: Newtonian mechanics
+        </p>
+        <a href="#"
+          >Learn More
+          <svg
+            width="10"
+            height="16"
+            viewBox="0 0 10 16"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg">
+            <g clip-path="url(#clip0_2636_2778)">
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M0.680771 0.180771C0.737928 0.123469 0.805828 0.0780065 0.880583 0.0469869C0.955337 0.0159672 1.03548 0 1.11641 0C1.19735 0 1.27749 0.0159672 1.35224 0.0469869C1.427 0.0780065 1.4949 0.123469 1.55205 0.180771L8.9358 7.56452C8.9931 7.62168 9.03857 7.68958 9.06959 7.76433C9.10061 7.83909 9.11657 7.91923 9.11657 8.00016C9.11657 8.0811 9.10061 8.16123 9.06959 8.23599C9.03857 8.31074 8.9931 8.37864 8.9358 8.4358L1.55205 15.8196C1.43651 15.9351 1.27981 16 1.11641 16C0.953015 16 0.79631 15.9351 0.680771 15.8196C0.565232 15.704 0.500322 15.5473 0.500322 15.3839C0.500322 15.2205 0.565232 15.0638 0.680771 14.9483L7.63011 8.00016L0.680771 1.05205C0.623469 0.994896 0.578006 0.926996 0.546986 0.852242C0.515967 0.777487 0.5 0.697347 0.5 0.616412C0.5 0.535478 0.515967 0.455338 0.546986 0.380583C0.578006 0.305829 0.623469 0.237928 0.680771 0.180771Z"
+                fill="#96BB7C" />
+            </g>
+            <defs>
+              <clipPath id="clip0_2636_2778">
+                <rect
+                  width="9"
+                  height="16"
+                  fill="white"
+                  transform="translate(0.5)" />
+              </clipPath>
+            </defs>
+          </svg>
+        </a>
+      </div>
+    </section>
+    <section id="package-2" class="container">
+      <div class="package-info">
+        <div></div>
+        <h2>Approdable Packages</h2>
+        <p>
+          Problems trying to resolve the conflict between the two major realms
+          of Classical physics: Newtonian mechanics
+        </p>
+        <a href="#"
+          >Learn More
+          <svg
+            width="10"
+            height="16"
+            viewBox="0 0 10 16"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg">
+            <g clip-path="url(#clip0_2636_2778)">
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M0.680771 0.180771C0.737928 0.123469 0.805828 0.0780065 0.880583 0.0469869C0.955337 0.0159672 1.03548 0 1.11641 0C1.19735 0 1.27749 0.0159672 1.35224 0.0469869C1.427 0.0780065 1.4949 0.123469 1.55205 0.180771L8.9358 7.56452C8.9931 7.62168 9.03857 7.68958 9.06959 7.76433C9.10061 7.83909 9.11657 7.91923 9.11657 8.00016C9.11657 8.0811 9.10061 8.16123 9.06959 8.23599C9.03857 8.31074 8.9931 8.37864 8.9358 8.4358L1.55205 15.8196C1.43651 15.9351 1.27981 16 1.11641 16C0.953015 16 0.79631 15.9351 0.680771 15.8196C0.565232 15.704 0.500322 15.5473 0.500322 15.3839C0.500322 15.2205 0.565232 15.0638 0.680771 14.9483L7.63011 8.00016L0.680771 1.05205C0.623469 0.994896 0.578006 0.926996 0.546986 0.852242C0.515967 0.777487 0.5 0.697347 0.5 0.616412C0.5 0.535478 0.515967 0.455338 0.546986 0.380583C0.578006 0.305829 0.623469 0.237928 0.680771 0.180771Z"
+                fill="#96BB7C" />
+            </g>
+            <defs>
+              <clipPath id="clip0_2636_2778">
+                <rect
+                  width="9"
+                  height="16"
+                  fill="white"
+                  transform="translate(0.5)" />
+              </clipPath>
+            </defs>
+          </svg>
+        </a>
+      </div>
+      <div class="video">
+        <div class="gradient"></div>
+        <div class="button-container">
+          <svg
+            width="20"
+            height="24"
+            viewBox="0 0 20 24"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg">
+            <g clip-path="url(#clip0_2636_2797)">
+              <path
+                d="M18.5396 13.7028L3.42823 22.7265C2.14579 23.4915 0.5 22.5652 0.5 21.0229V2.97568C0.5 1.4359 2.14342 0.507142 3.42823 1.27459L18.5396 10.2982C18.8313 10.4696 19.0738 10.7173 19.2425 11.0163C19.4112 11.3153 19.5 11.6548 19.5 12.0005C19.5 12.3462 19.4112 12.6858 19.2425 12.9848C19.0738 13.2837 18.8313 13.5315 18.5396 13.7028Z"
+                fill="white" />
+            </g>
+            <defs>
+              <clipPath id="clip0_2636_2797">
+                <rect
+                  width="19"
+                  height="23"
+                  fill="white"
+                  transform="translate(0.800781 0.799805)" />
+              </clipPath>
+            </defs>
+          </svg>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
