--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>School Solved</title>
     <link rel="stylesheet" href="style.css" />
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
   </head>
   <body>
     <header>
@@ -71,7 +72,7 @@
           <img src="images/hero.png" alt="hero img" class="hero-img" />
         </div>
         <div class="features container">
-          <div>
+          <div class="feature-item">
             <img src="images/features-1.svg" alt="features 1" />
             <h3>Certified Teacher</h3>
             <div></div>
@@ -80,7 +81,7 @@
               small-scale behaviour...
             </p>
           </div>
-          <div>
+          <div class="feature-item">
             <img src="images/features-2.svg" alt="features 2" />
             <h3>2,769 online courses</h3>
             <div></div>
@@ -89,7 +90,7 @@
               small-scale behaviour...
             </p>
           </div>
-          <div>
+          <div class="feature-item">
             <img src="images/features-3.svg" alt="features 3" />
             <h3>2,769 online courses</h3>
             <div></div>
@@ -104,7 +105,7 @@
     <section id="package-1" class="container">
       <img src="images/thumb-concept-15.png" alt="thumb concept" />
       <div class="package-info">
-        <div></div>
+        <div class="line"></div>
         <h2>Approdable Packages</h2>
         <p>
           Problems trying to resolve the conflict between the two major realms
@@ -140,7 +141,7 @@
     </section>
     <section id="package-2" class="container">
       <div class="package-info">
-        <div></div>
+        <div class="line"></div>
         <h2>Approdable Packages</h2>
         <p>
           Problems trying to resolve the conflict between the two major realms
@@ -200,5 +201,374 @@
         </div>
       </div>
     </section>
+    <section id="course" class="container">
+      <div class="info">
+        <h6>Courses</h6>
+        <h2>Video in Live Action</h2>
+        <p>
+          Problems trying to resolve the conflict between the two major realms
+          of Classical physics: Newtonian mechanics
+        </p>
+      </div>
+      <div class="product-list">
+        <div class="product">
+          <div class="thumbnail">
+            <span>Sale</span>
+            <div class="icons">
+              <img src="images/like.svg" alt="like icon" />
+              <img src="images/basket.svg" alt="like icon" />
+              <img src="images/eye.svg" alt="like icon" />
+            </div>
+          </div>
+          <div class="product-info">
+            <div class="product-title">
+              <h6>Expert instruction</h6>
+              <div>
+                <img src="images/star.svg" alt="star icon" />
+                <span>4.9</span>
+              </div>
+            </div>
+            <h5>Every Client Matters</h5>
+            <p>We focus on ergonomics and meeting you....</p>
+            <div class="sales">
+              <img src="images/download.svg" alt="download icon" />
+              <h6>15 sales</h6>
+            </div>
+            <div class="prices">
+              <h5>$16.48</h5>
+              <h5>$6.48</h5>
+            </div>
+            <button type="button" class="custom-btn" aria-label="Learn More">
+              Learn More
+              <svg
+                width="10"
+                height="16"
+                viewBox="0 0 10 16"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg">
+                <g clip-path="url(#clip0_2636_2778)">
+                  <path
+                    fill-rule="evenodd"
+                    clip-rule="evenodd"
+                    d="M0.680771 0.180771C0.737928 0.123469 0.805828 0.0780065 0.880583 0.0469869C0.955337 0.0159672 1.03548 0 1.11641 0C1.19735 0 1.27749 0.0159672 1.35224 0.0469869C1.427 0.0780065 1.4949 0.123469 1.55205 0.180771L8.9358 7.56452C8.9931 7.62168 9.03857 7.68958 9.06959 7.76433C9.10061 7.83909 9.11657 7.91923 9.11657 8.00016C9.11657 8.0811 9.10061 8.16123 9.06959 8.23599C9.03857 8.31074 8.9931 8.37864 8.9358 8.4358L1.55205 15.8196C1.43651 15.9351 1.27981 16 1.11641 16C0.953015 16 0.79631 15.9351 0.680771 15.8196C0.565232 15.704 0.500322 15.5473 0.500322 15.3839C0.500322 15.2205 0.565232 15.0638 0.680771 14.9483L7.63011 8.00016L0.680771 1.05205C0.623469 0.994896 0.578006 0.926996 0.546986 0.852242C0.515967 0.777487 0.5 0.697347 0.5 0.616412C0.5 0.535478 0.515967 0.455338 0.546986 0.380583C0.578006 0.305829 0.623469 0.237928 0.680771 0.180771Z"
+                    fill="#96BB7C" />
+                </g>
+                <defs>
+                  <clipPath id="clip0_2636_2778">
+                    <rect
+                      width="9"
+                      height="16"
+                      fill="white"
+                      transform="translate(0.5)" />
+                  </clipPath>
+                </defs>
+              </svg>
+            </button>
+          </div>
+        </div>
+        <div class="product">
+          <div class="thumbnail">
+            <span>Sale</span>
+            <div class="icons">
+              <img src="images/like.svg" alt="like icon" />
+              <img src="images/basket.svg" alt="like icon" />
+              <img src="images/eye.svg" alt="like icon" />
+            </div>
+          </div>
+          <div class="product-info">
+            <div class="product-title">
+              <h6>Books Liberary</h6>
+              <div>
+                <img src="images/star.svg" alt="star icon" />
+                <span>4.9</span>
+              </div>
+            </div>
+            <h5>Approdable Packages</h5>
+            <p>We focus on ergonomics and meeting you....</p>
+            <div class="sales">
+              <img src="images/download.svg" alt="download icon" />
+              <h6>15 sales</h6>
+            </div>
+            <div class="prices">
+              <h5>$16.48</h5>
+              <h5>$6.48</h5>
+            </div>
+            <button type="button" class="custom-btn" aria-label="Learn More">
+              Learn More
+              <svg
+                width="10"
+                height="16"
+                viewBox="0 0 10 16"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg">
+                <g clip-path="url(#clip0_2636_2778)">
+                  <path
+                    fill-rule="evenodd"
+                    clip-rule="evenodd"
+                    d="M0.680771 0.180771C0.737928 0.123469 0.805828 0.0780065 0.880583 0.0469869C0.955337 0.0159672 1.03548 0 1.11641 0C1.19735 0 1.27749 0.0159672 1.35224 0.0469869C1.427 0.0780065 1.4949 0.123469 1.55205 0.180771L8.9358 7.56452C8.9931 7.62168 9.03857 7.68958 9.06959 7.76433C9.10061 7.83909 9.11657 7.91923 9.11657 8.00016C9.11657 8.0811 9.10061 8.16123 9.06959 8.23599C9.03857 8.31074 8.9931 8.37864 8.9358 8.4358L1.55205 15.8196C1.43651 15.9351 1.27981 16 1.11641 16C0.953015 16 0.79631 15.9351 0.680771 15.8196C0.565232 15.704 0.500322 15.5473 0.500322 15.3839C0.500322 15.2205 0.565232 15.0638 0.680771 14.9483L7.63011 8.00016L0.680771 1.05205C0.623469 0.994896 0.578006 0.926996 0.546986 0.852242C0.515967 0.777487 0.5 0.697347 0.5 0.616412C0.5 0.535478 0.515967 0.455338 0.546986 0.380583C0.578006 0.305829 0.623469 0.237928 0.680771 0.180771Z"
+                    fill="#96BB7C" />
+                </g>
+                <defs>
+                  <clipPath id="clip0_2636_2778">
+                    <rect
+                      width="9"
+                      height="16"
+                      fill="white"
+                      transform="translate(0.5)" />
+                  </clipPath>
+                </defs>
+              </svg>
+            </button>
+          </div>
+        </div>
+        <div class="product">
+          <div class="thumbnail">
+            <span>Sale</span>
+            <div class="icons">
+              <img src="images/like.svg" alt="like icon" />
+              <img src="images/basket.svg" alt="like icon" />
+              <img src="images/eye.svg" alt="like icon" />
+            </div>
+          </div>
+          <div class="product-info">
+            <div class="product-title">
+              <h6>Lifetime access</h6>
+              <div>
+                <img src="images/star.svg" alt="star icon" />
+                <span>4.9</span>
+              </div>
+            </div>
+            <h5>Watch our Courses</h5>
+            <p>We focus on ergonomics and meeting you....</p>
+            <div class="sales">
+              <img src="images/download.svg" alt="download icon" />
+              <h6>15 sales</h6>
+            </div>
+            <div class="prices">
+              <h5>$16.48</h5>
+              <h5>$6.48</h5>
+            </div>
+            <button type="button" class="custom-btn" aria-label="Learn More">
+              Learn More
+              <svg
+                width="10"
+                height="16"
+                viewBox="0 0 10 16"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg">
+                <g clip-path="url(#clip0_2636_2778)">
+                  <path
+                    fill-rule="evenodd"
+                    clip-rule="evenodd"
+                    d="M0.680771 0.180771C0.737928 0.123469 0.805828 0.0780065 0.880583 0.0469869C0.955337 0.0159672 1.03548 0 1.11641 0C1.19735 0 1.27749 0.0159672 1.35224 0.0469869C1.427 0.0780065 1.4949 0.123469 1.55205 0.180771L8.9358 7.56452C8.9931 7.62168 9.03857 7.68958 9.06959 7.76433C9.10061 7.83909 9.11657 7.91923 9.11657 8.00016C9.11657 8.0811 9.10061 8.16123 9.06959 8.23599C9.03857 8.31074 8.9931 8.37864 8.9358 8.4358L1.55205 15.8196C1.43651 15.9351 1.27981 16 1.11641 16C0.953015 16 0.79631 15.9351 0.680771 15.8196C0.565232 15.704 0.500322 15.5473 0.500322 15.3839C0.500322 15.2205 0.565232 15.0638 0.680771 14.9483L7.63011 8.00016L0.680771 1.05205C0.623469 0.994896 0.578006 0.926996 0.546986 0.852242C0.515967 0.777487 0.5 0.697347 0.5 0.616412C0.5 0.535478 0.515967 0.455338 0.546986 0.380583C0.578006 0.305829 0.623469 0.237928 0.680771 0.180771Z"
+                    fill="#96BB7C" />
+                </g>
+                <defs>
+                  <clipPath id="clip0_2636_2778">
+                    <rect
+                      width="9"
+                      height="16"
+                      fill="white"
+                      transform="translate(0.5)" />
+                  </clipPath>
+                </defs>
+              </svg>
+            </button>
+          </div>
+        </div>
+        <div class="product">
+          <div class="thumbnail">
+            <span>Sale</span>
+            <div class="icons">
+              <img src="images/like.svg" alt="like icon" />
+              <img src="images/basket.svg" alt="like icon" />
+              <img src="images/eye.svg" alt="like icon" />
+            </div>
+          </div>
+          <div class="product-info">
+            <div class="product-title">
+              <h6>Books Liberary</h6>
+              <div>
+                <img src="images/star.svg" alt="star icon" />
+                <span>4.9</span>
+              </div>
+            </div>
+            <h5>Our Popular Courses</h5>
+            <p>We focus on ergonomics and meeting you....</p>
+            <div class="sales">
+              <img src="images/download.svg" alt="download icon" />
+              <h6>15 sales</h6>
+            </div>
+            <div class="prices">
+              <h5>$16.48</h5>
+              <h5>$6.48</h5>
+            </div>
+            <button type="button" class="custom-btn" aria-label="Learn More">
+              Learn More
+              <svg
+                width="10"
+                height="16"
+                viewBox="0 0 10 16"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg">
+                <g clip-path="url(#clip0_2636_2778)">
+                  <path
+                    fill-rule="evenodd"
+                    clip-rule="evenodd"
+                    d="M0.680771 0.180771C0.737928 0.123469 0.805828 0.0780065 0.880583 0.0469869C0.955337 0.0159672 1.03548 0 1.11641 0C1.19735 0 1.27749 0.0159672 1.35224 0.0469869C1.427 0.0780065 1.4949 0.123469 1.55205 0.180771L8.9358 7.56452C8.9931 7.62168 9.03857 7.68958 9.06959 7.76433C9.10061 7.83909 9.11657 7.91923 9.11657 8.00016C9.11657 8.0811 9.10061 8.16123 9.06959 8.23599C9.03857 8.31074 8.9931 8.37864 8.9358 8.4358L1.55205 15.8196C1.43651 15.9351 1.27981 16 1.11641 16C0.953015 16 0.79631 15.9351 0.680771 15.8196C0.565232 15.704 0.500322 15.5473 0.500322 15.3839C0.500322 15.2205 0.565232 15.0638 0.680771 14.9483L7.63011 8.00016L0.680771 1.05205C0.623469 0.994896 0.578006 0.926996 0.546986 0.852242C0.515967 0.777487 0.5 0.697347 0.5 0.616412C0.5 0.535478 0.515967 0.455338 0.546986 0.380583C0.578006 0.305829 0.623469 0.237928 0.680771 0.180771Z"
+                    fill="#96BB7C" />
+                </g>
+                <defs>
+                  <clipPath id="clip0_2636_2778">
+                    <rect
+                      width="9"
+                      height="16"
+                      fill="white"
+                      transform="translate(0.5)" />
+                  </clipPath>
+                </defs>
+              </svg>
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="testimonial" class="container">
+      <div class="info">
+        <h6>Testimonials</h6>
+        <h2>Our Popular Courses</h2>
+        <p>
+          Problems trying to resolve the conflict between the two major realms
+          of Classical physics: Newtonian mechanics
+        </p>
+      </div>
+      <div class="testimonial-list">
+        <div class="testimonial-item">
+          <img src="images/testimonial-1.png" alt="testimonial user 1" />
+          <div class="card-content">
+            <p>
+              Slate helps you see how many more days you need to work to reach
+              your financial goal for the month and year.
+            </p>
+            <div class="ratings">
+              <img src="images/star-filled.svg" alt="star icon" />
+              <img src="images/star-filled.svg" alt="star icon" />
+              <img src="images/star-filled.svg" alt="star icon" />
+              <img src="images/star-filled.svg" alt="star icon" />
+              <img src="images/star-unfilled.svg" alt="star icon" />
+            </div>
+            <div>
+              <h5>Regina Miles</h5>
+              <h6>Designer</h6>
+            </div>
+          </div>
+        </div>
+        <div class="testimonial-item">
+          <img src="images/testimonial-2.png" alt="testimonial user 2" />
+          <div class="card-content">
+            <p>
+              Slate helps you see how many more days you need to work to reach
+              your financial goal for the month and year.
+            </p>
+            <div class="ratings">
+              <img src="images/star-filled.svg" alt="star icon" />
+              <img src="images/star-filled.svg" alt="star icon" />
+              <img src="images/star-filled.svg" alt="star icon" />
+              <img src="images/star-filled.svg" alt="star icon" />
+              <img src="images/star-unfilled.svg" alt="star icon" />
+            </div>
+            <div>
+              <h5>Regina Miles</h5>
+              <h6>Designer</h6>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="newsletter">
+      <div class="container newsletter-content">
+        <div class="news-letter-info">
+          <h6>Newsletter</h6>
+          <h3>Our Experts Teacher</h3>
+          <p>
+            Problems trying to resolve the conflict between the two major realms
+            of Classical physics: Newtonian mechanics
+          </p>
+        </div>
+        <form>
+          <input type="email" placeholder="Your email" name="email" />
+          <button type="button" class="custom-btn" aria-label="Subscribe">
+            Subscribe
+          </button>
+        </form>
+      </div>
+    </section>
+    <footer>
+      <div class="container footer-list">
+        <div class="footer-item">
+          <h5>Company Info</h5>
+          <div class="links">
+            <a href="#">About Us</a>
+            <a href="#">Carrier</a>
+            <a href="#">We are hiring</a>
+            <a href="#">Blog</a>
+          </div>
+        </div>
+        <div class="footer-item">
+          <h5>Legal</h5>
+          <div class="links">
+            <a href="#">About Us</a>
+            <a href="#">Carrier</a>
+            <a href="#">We are hiring</a>
+            <a href="#">Blog</a>
+          </div>
+        </div>
+        <div class="footer-item">
+          <h5>Features</h5>
+          <div class="links">
+            <a href="#">Business Marketing</a>
+            <a href="#">User Analytic</a>
+            <a href="#">Live Chat</a>
+            <a href="#">Unlimited Support</a>
+          </div>
+        </div>
+        <div class="footer-item">
+          <h5>Resources</h5>
+          <div class="links">
+            <a href="#">IOS & Android</a>
+            <a href="#">Watch a Demo</a>
+            <a href="#">Customers</a>
+            <a href="#">API</a>
+          </div>
+        </div>
+        <div class="footer-item">
+          <h5>Get In Touch</h5>
+          <div class="contact-list">
+            <div class="contact-item">
+              <img src="images/phone.svg" alt="phone icon" />
+              <h6>(123) 456-1234</h6>
+            </div>
+            <div class="contact-item">
+              <img src="images/map.svg" alt="map icon" />
+              <h6>123 Example Location, State, Country</h6>
+            </div>
+            <div class="contact-item">
+              <img src="images/email.svg" alt="email icon" />
+              <h6>firdaus.amin@example.com</h6>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div>
+        <div class="container">
+          <h6>Made With Love By firdausthedev All Right Reserved</h6>
+          <div>
+            <img src="images/facebook.svg" alt="facebook icon" />
+            <img src="images/instagram.svg" alt="instagram icon" />
+            <img src="images/twitter.svg" alt="twitter icon" />
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
